<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:padding="24dp"
    android:background="@android:color/white"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <TextView android:id="@+id/title"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:textStyle="bold" android:textSize="20sp"
        android:text="@string/time_to_take_medicine_card"/>

    <TextView android:id="@+id/subtitle"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:paddingTop="8dp" android:text="@string/name_time"/>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:gravity="end" android:paddingTop="16dp">

        <Button android:id="@+id/btnSnooze"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/snooze_10_min"/>

        <Button android:id="@+id/btnSkip"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginStart="8dp" android:text="@string/skip_medicine"/>

        <Button android:id="@+id/btnTaken"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginStart="8dp" android:text="@string/taken_medicine"/>
    </LinearLayout>
</LinearLayout> 